AI Improvements
Security (blockers)
  - UserMapper — BCrypt password hashing restored (injected via constructor)
  - data.sql — {noop}password replaced with real BCrypt-12 hashes
  - UserController — @PreAuthorize("hasRole('ADMIN')") added to all 6 endpoints
  - @CrossOrigin(origins = "*") removed from BoatController, UserController, AuditController
  - SecurityConfig — CORS origins now driven by app.cors.allowed-origins env var (default: localhost only); PATCH added to allowed methods;
  /actuator/** narrowed to /actuator/health
  - application.yml — OAuth2 client-secret and Dex URIs externalized to ${DEX_CLIENT_SECRET}, ${DEX_ISSUER_URI}, ${DEX_JWK_SET_URI}
  - application.yml — management.security.enabled: false removed; show-details: when-authorized
  - Spring Security/Web debug logs demoted from DEBUG → WARN

  Config
  - application-prod.yml created — disables H2 console, Swagger, SQL init; structured log pattern; INFO-only logging
  - application.properties deleted (was a full duplicate of application.yml)
  - application.yml — management: block moved outside spring: (was incorrectly nested)

  Backend quality
  - MainController.previewPage() stub deleted
  - BoatService.getStats() — .get(0) → .stream().findFirst().orElse(...) (safe on empty DB)
  - BoatService.deleteBoat() — two-query race fixed: existsById+deleteById → findById+delete(entity)
  - CreateBoatRequest / UpdateBoatRequest — added @Size for name/description/ownerName matching DB column widths; @Max(2100) on yearBuilt
  - AuthController.LoginRequest — @NotBlank + @Valid added

  Infrastructure
  - Dockerfile — Markdown link syntax in HEALTHCHECK CMD fixed
  - Docker/dex-full/compose.yml — restart: unless-stopped + deploy.resources.limits on both services; DEX_CLIENT_SECRET passed as env var
  - maven.yml — main branch added to push/pull_request triggers
  - docs.yml — completely rewritten with proper on:, checkout, Java setup, Node setup, corrected steps, upload-artifact@v4

  Frontend
  - BoatLis